add section one

--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First project</title>
+   <link rel="stylesheet" href="style.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet"
+   
 </head>
-<link rel="stylesheet" href="style.css">
+
 <body>
-    
+  <section class="width-maintain">
+    <div>
+        <h1>Wellcome To</h1>
+        <h1> <span class="orange-color">Md Mehedi hasan</span> World!</h1>
+    <h3>Mehedi is a lovely guy!</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quae hic deleniti. Recusandae sit alias illo consequuntur architecto magnam ex! Reiciendis blanditiis inventore itaque quidem, officia dolorum unde error alias?Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quae hic deleniti. Recusandae sit alias illo consequuntur architecto magnam ex! Reiciendis blanditiis inventore itaque quidem, officia dolorum unde error alias?</p>
+    <a class="hireme-decoration" target="_blank" href="linkdin.com">Hire Me</a>
+    </div>
+    <div>
+        <img src="images/developer.png" alt="">
+    </div>
+  </section>
+  <section>
+    <div>
+      <img src="images/dddd.png" alt="">
+    </div>
+  </section>
 </body>
 </html>
