--- a/index.html
+++ b/index.html
@@ -22,14 +22,20 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quae hic deleniti. Recusandae sit alias illo consequuntur architecto magnam ex! Reiciendis blanditiis inventore itaque quidem, officia dolorum unde error alias?Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quae hic deleniti. Recusandae sit alias illo consequuntur architecto magnam ex! Reiciendis blanditiis inventore itaque quidem, officia dolorum unde error alias?</p>
     <a class="hireme-decoration" target="_blank" href="linkdin.com">Hire Me</a>
     </div>
-    <div>
+    <div class="half-width">
         <img src="images/developer.png" alt="">
     </div>
   </section>
-  <section>
-    <div>
-      <img src="images/dddd.png" alt="">
-    </div>
-  </section>
+<section class="big-dream">
+  <div>
+    <img src="images/dddd.png" alt="">
+  </div>
+  <div>
+    <h1 class="big-color">Big-Dream</h1>
+    <h3>Think big do big world will remamber you!</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero natus tempore possimus quisquam velit pariatur voluptates quos ab minima dicta consequatur aliquid exercitationem et nemo. Velit enim illo possimus.</p>
+    <a class="hireme-decoration" target="_blank" href="linkdin.com">Read More In next Page</a>
+  </div>
+</section>
 </body>
 </html>
