--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <section class="width-maintain">
+  <section class="width-maintain flaxyble-contsiner">
     <div>
         <h1>Wellcome To</h1>
         <h1> <span class="orange-color">Md Mehedi hasan</span> World!</h1>
@@ -26,7 +26,7 @@
         <img src="images/developer.png" alt="">
     </div>
   </section>
-<section class="big-dream">
+<section class="big-dream flaxyble-contsiner">
   <div>
     <img src="images/dddd.png" alt="">
   </div>
@@ -36,6 +36,24 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, vero natus tempore possimus quisquam velit pariatur voluptates quos ab minima dicta consequatur aliquid exercitationem et nemo. Velit enim illo possimus.</p>
     <a class="hireme-decoration" target="_blank" href="linkdin.com">Read More In next Page</a>
   </div>
+</section>
+<section class="experiment-area">
+  
+  <h1>Experiments</h1>
+  <div class="flaxyble-contsiner">
+    <div class="shadow-area">
+      <h1>The experiment of our life</h1>
+      <h4 class="orange-color"> we are the one</h4>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptate assumenda labore laboriosam doloremque eum maxime ducimus deleniti voluptatibus, magni distinctio deserunt vel, veniam, quisquam esse fuga reprehenderit adipisci ad praesentium.</p>
+    </div>
+    <div class="mehedi">
+      <h1>Support us</h1>
+      <h4 class="orange-color">support us as beginer</h4>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit magnam, ratione ducimus eius nesciunt harum qui dolor tenetur odit itaque quos sit cupiditate repudiandae velit ad saepe numquam. Dicta, maxime!</p>
+    </div>
+  </div>
+
+
 </section>
 </body>
 </html>
